tests/errors/semantic/non_blocking/PRIMITIVE_IMMUTABLE_RESTRICTION_ISNOT_integer.py
@types('int', 'int')
def compare_isnot_int_int(a, b):
    return a is not b
